# EII-3-ASW

Presentación Seminario/: Coupling in Software Design.docx
Prácticas/Presentación/: yovi_presentacion_ligera.html
Prácticas/yovi_es1b/: README.md  docker-compose.deploy.yml  docker-compose.yml  package-lock.json  presentacion.html  sonar-project.properties  windows-setup-https.ps1
Prácticas/yovi_es1b/gamey/: Cargo.toml  Dockerfile
Prácticas/yovi_es1b/gamey/src/: cli.rs  gamey_error.rs  main.rs
Prácticas/yovi_es1b/gamey/src/bot/: attacker_bot.rs  blocker_bot.rs  bot_utils.rs  edge_bot.rs  mod.rs  pro_bot.rs  random.rs  ybot.rs  ybot_registry.rs
Prácticas/yovi_es1b/gamey/src/bot_server/: error.rs  mod.rs  play.rs  state.rs
Prácticas/yovi_es1b/gamey/src/core/: game.rs  mod.rs  movement.rs  view.rs
Prácticas/yovi_es1b/gamey/src/core/topology/: engine.rs  mod.rs  triangular.rs
Prácticas/yovi_es1b/gamey/src/notation/: yen.rs
Prácticas/yovi_es1b/gamey/tests/: bot_logic_tests.rs  bot_server_tests.rs  cli_tests.rs  core_tests.rs  view_tests.rs
Prácticas/yovi_es1b/users/: authMiddleware.js  openapi.yaml  package-lock.json  package.json  paypalService.js  socketHandler.js  users-service.js
Prácticas/yovi_es1b/users/__tests__/: friends-service.test.js  game-service.test.js  login-service.test.js  profile-service.test.js  public-profile.test.js  register-service.test.js  socketHandler.test.js  ssl-config.test.js  test-utils.js
Prácticas/yovi_es1b/users/models/: friendship.js  user.js
Prácticas/yovi_es1b/users/monitoring/prometheus/: prometheus.yml
Prácticas/yovi_es1b/webapp/src/: App.css  i18n.ts  index.css
Teoria/: Apuntes ASW.txt  Examen Teoría ASW.txt  ExamenesLabra.txt
(+76 files in other folders)
