[package]
name = "gamey"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of a game engine"
authors = [
    "Jose Emilio Labra Gayo",
    "Pablo González González",
    "Diego Martín Fernández",
    "Celia Melendi Lavandera"
]
license = "MIT"
readme = "./README.md"
keywords = ["game", "engine"]
categories = ["games"]

[[bin]]
path = "src/main.rs"
name = "gamey"

[lib]
name = "gamey"
path = "src/lib.rs"


[dependencies]
dashmap = "6.1"
jsonwebtoken = "9.3"
# ... otras dependencias
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-prometheus = "0.7"
clap = { version = "4.0", features = ["derive"] }
rand = "0.9"
rustyline = { version = "17.0", features = ["with-file-history"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.0", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }

utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", default-features = false, features = ["axum", "vendored"] }
tower-http = { version = "0.5", features = ["cors"] }
mongodb = "3.5.1"
chrono = "0.4"
futures = "0.3"


[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
tempfile = "3.15"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gamey_benchmarks"
harness = false
